--- a/frontend/src/app/contacts/contacts.component.html
+++ b/frontend/src/app/contacts/contacts.component.html
@@ -1,43 +1,50 @@
-<div class="container" >
-    <div class="row">
-        <div class="column c-header">
-            Name
+<section class="section">
+    <div class="container" *ngIf="contacts.length !== 0">
+        <div class="row" >
+            <div class="column c-header">
+                Name
+            </div>
+            <div class="column c-header">
+                Home phone
+            </div>
+            <div class="column c-header">
+                Address
+            </div>
+            <div class="column c-header">
+                E-mail
+            </div>
+            <div class="column c-header">
+                Cell phone Number
+            </div>
+            <div class="column_btn c-header">
+                Delete/Alter
+            </div>
         </div>
-        <div class="column c-header">
-            Home phone
-        </div>
-        <div class="column c-header">
-            Address
-        </div>
-        <div class="column c-header">
-            E-mail
-        </div>
-        <div class="column c-header">
-            Cell phone Number
-        </div>
-        <div class="column_btn c-header">
-            Delete/Alter
+        <div class="row" *ngFor="let contact of contacts">
+            <div class="column">
+                {{contact.name}}
+            </div>
+            <div class="column">
+                {{contact.phone_number}}
+            </div>
+            <div class="column">
+                {{contact.address}}
+            </div>
+            <div class="column">
+                {{contact.email}}
+            </div>
+            <div class="column">
+                {{contact.cell_number}}
+            </div>
+            <div class="column_btn">
+                <button class="btn" (click)="delete(contact.id)" type="button">Delete</button>
+                <button class="btn" type="button" [routerLink]="['/api/alter/contact', contact.id]">Alter</button>
+            </div>
         </div>
     </div>
-    <div class="row" *ngFor="let contact of contacts">
-        <div class="column">
-            {{contact.name}}
-        </div>
-        <div class="column">
-            {{contact.phone_number}}
-        </div>
-        <div class="column">
-            {{contact.address}}
-        </div>
-        <div class="column">
-            {{contact.email}}
-        </div>
-        <div class="column">
-            {{contact.cell_number}}
-        </div>
-        <div class="column_btn">
-            <button class="btn" (click)="delete(contact.id)" type="button">Delete</button>
-            <button class="btn" type="button" [routerLink]="['/api/alter/contact', contact.id]">Alter</button>
-        </div>
+    <div class="container" *ngIf="contacts.length === 0 ">
+        <h2>Seems like you don't have any contacts yet.</h2>
+        <p>Click the button down below to add some :)</p>
+        <button class="btn" [routerLink]="['/api/add/contact']">Add contacts</button>
     </div>
-</div>
+</section>
