--- a/frontend/src/app/contact-register/contact-register.component.html
+++ b/frontend/src/app/contact-register/contact-register.component.html
@@ -1,4 +1,4 @@
-<section class="section-register">
+<section class="section-register" [@contactRegisterAppeared]='contactRegisterState'>
     <div class="container">
         <form  class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
             <div>
