--- a/frontend/src/app/section/section.component.html
+++ b/frontend/src/app/section/section.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" [@sectionAppeared]="sectionState">
     <div class="container">
         <h1>Welcome to your contact list!</h1>
         <p>Click the button down below to see your contacts.</p>
